--- a/PromoStudio.Web/Views/Home/Index.cshtml
+++ b/PromoStudio.Web/Views/Home/Index.cshtml
@@ -1,16 +1,17 @@
-﻿@{
+﻿@model PromoStudio.Web.PromoStudioPrincipal
+@{
     ViewBag.Title = "Welcome to PromoStudio";
 }
 
 @section scripts
-{//
+{
+    @if (Model == null) {
     <script type="text/javascript">
         require(["jquery", "viewModels/loginViewModel", "googleOAuth", "facebookOAuth", "bootstrap"],
             function ($, loginViewModel, googleOauth, facebookOAuth) {
                 var goa = new googleOauth("#gLogin", function (user) {
                     $("#loginButtons").hide();
                     $('#userName').text("Welcome, " + user.name + " (" + user.email + ")");
-                    $('#userPicture').attr('src', user.picture).attr("alt", user.name);
                     $('#loginResult').show();
                     var vm = new loginViewModel(1, user.id, user.name, user.email);
                     vm.PerformLogin();
@@ -23,7 +24,6 @@
                 var foa = new facebookOAuth("#fbLogin", function (user) {
                     $("#loginButtons").hide();
                     $('#userName').text("Welcome, " + user.name + " (" + user.email + ")");
-                    $('#userPicture').attr('src', user.picture.data.url).attr("alt", user.name);
                     $('#loginResult').show();
                     var vm = new loginViewModel(2, user.id, user.name, user.email);
                     vm.PerformLogin();
@@ -34,12 +34,15 @@
                 });
             });
     </script>
+    }
 }
 
 <!-- Jumbotron -->
 <div class="jumbotron">
     <img class="logo" src="@Url.Content("~/Content/img/promoStudio.jpg")" alt="PromoStudio Logo" />
     <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    
+    @if (Model == null) {
     <div id="loginButtons">
         <a id="fbLogin" class="signinBtn facebookSignin"></a>
         <a id="gLogin" class="signinBtn googleSignin"></a>
@@ -47,8 +50,8 @@
 
     <div id="loginResult" style="display: none">
         <div id="userName"></div>
-        <img src="#" id="userPicture" />
     </div>
+    }
 </div>
 
 <hr />
