--- a/PromoStudio.Web/Views/Shared/_Layout.cshtml
+++ b/PromoStudio.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <div class="container main-container">
         <h1>@ViewBag.Title</h1>
         <hr />
-        <div class="navbar">
+        <div class="navbar" @Html.Raw(Context.User.Identity.IsAuthenticated ? "" : "style='display:none'")>
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
@@ -43,7 +43,7 @@
               </ul>
             </div>
           </div>
-        </div><!-- /.navbar -->
+        </div>
         @RenderBody()
         <hr />
         <div class="footer">
