--- a/PromoStudio.Web/Views/_ViewStart.cshtml
+++ b/PromoStudio.Web/Views/_ViewStart.cshtml
@@ -1,3 +1,6 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = (ViewContext.Controller.ViewData.ContainsKey("IsPAJAX")
+        && (bool)ViewContext.Controller.ViewData["IsPAJAX"])
+        ? "~/Views/Shared/_Layout.cshtml"
+        : "~/Views/Shared/_Layout.cshtml";
 }
