--- a/PromoStudio.Web/Views/Videos/Index.cshtml
+++ b/PromoStudio.Web/Views/Videos/Index.cshtml
@@ -11,14 +11,9 @@
                     var data = {},
                         container = $("div.main-data-container")[0],
                         vm;
-                    data.Customer = @Html.Raw(ViewBag.CustomerJson);
-                    data.CustomerVideos = @Html.Raw(ViewBag.CustomerVideosJson);
-                    vm = new videosVm(data);
-                    ko.cleanNode(container);
+                    vm = new videosVm();
                     ko.applyBindings(vm, container);
-                    window.setInterval(function () {
-                        vm.UpdateStatus();
-                    }, 5000);
+                    vm.pageLoaded();
                 });
             });
     </script>
