--- a/PromoStudio.Web/Views/Scripts/FacebookOAuth.cshtml
+++ b/PromoStudio.Web/Views/Scripts/FacebookOAuth.cshtml
@@ -126,10 +126,10 @@ define(["jquery"], function ($) {
             win = window.open(oauthLoginUrl, "fboauth2", 'width=780,height=410,toolbar=0,scrollbars=0,status=0,resizable=0,location=0,menuBar=0');
             pollTimer = window.setInterval(function () {
                 try {
-                    console.log(win.document.URL);
-                    if (win.document.URL.indexOf(oauthRedirect) != -1) {
+                    console.log(win.document.location.href);
+                    if (win.document.location.href.indexOf(oauthRedirect) != -1) {
                         window.clearInterval(pollTimer);
-                        var url = win.document.URL,
+                        var url = win.document.location.href,
                             token = gup(url, 'access_token'),
                             state = gup(url, 'state'),
                             expiresIn = gup(url, 'expires_in');
