--- a/PromoStudio.Web/Views/Shared/_Layout.cshtml
+++ b/PromoStudio.Web/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="container main-container">
-        <div class="main-data-container">
+        <div data-pjax-container>
             @RenderBody()
         </div>
         <hr />
