--- a/PromoStudio.Web/Content/css/bootstrap-responsive.css
+++ b/PromoStudio.Web/Content/css/bootstrap-responsive.css
@@ -804,8 +804,8 @@
     padding-right: 20px;
     padding-left: 20px;
   }
-  .navbar-fixed-top,
-  .navbar-fixed-bottom,
+  /*.navbar-fixed-top,
+  .navbar-fixed-bottom,*/
   .navbar-static-top {
     margin-right: -20px;
     margin-left: -20px;
@@ -953,7 +953,7 @@
   body {
     padding-top: 0;
   }
-  .navbar-fixed-top,
+  /*.navbar-fixed-top,
   .navbar-fixed-bottom {
     position: static;
   }
@@ -967,14 +967,14 @@
   .navbar-fixed-bottom .navbar-inner {
     padding: 5px;
   }
-  .navbar .container {
-    width: auto;
-    padding: 0;
-  }
   .navbar .brand {
     padding-right: 10px;
     padding-left: 10px;
     margin: 0 0 0 -5px;
+  }*/
+  .navbar .container {
+    width: auto;
+    padding: 0;
   }
   .nav-collapse {
     clear: both;
