--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -10,7 +10,7 @@ div.color-band
     padding:0;
     margin:0;
     background:#d76c3f;
-    position:fixed;
+    position:absolute;
     width:100%;
     height:252px;
     z-index:-1;
@@ -39,6 +39,7 @@ div.loader-large {
     color: #ffffff;
     padding-bottom: 25px;
     height:105px;
+    margin-top:60px;
 }
 
 .header-container .logo
