--- a/PromoStudio.Web/Content/css/build.less
+++ b/PromoStudio.Web/Content/css/build.less
@@ -119,5 +119,57 @@
         }
 }
 
+.thumbcontainer {
+
+    > a.photo-thumbnail,
+    > a.photo-thumbnail:link,
+    > a.photo-thumbnail:hover,
+    > a.photo-thumbnail:active,
+    > a.photo-thumbnail:visited {
+        color: @basecolor;
+    }
+
+    > a.photo-thumbnail {
+        display: block;
+        float: left;
+        width: 272px;
+        margin:20px 0 0 20px;
+        overflow: hidden;
+        text-decoration: none;
+        color: @basecolor;
+        .rounded(@cs);
+        .box-shadow(0 1px 2px @shadowColor);
+
+        > .photo-preview {
+            background-color: @mediabgcolor;
+            .bgSize(contain);
+            height: 140px;
+        }
+
+        > .photo-selection {
+            height: 52px;
+            background-color: @bgbasecolor;
+
+            > .photo-title {
+                position: relative;
+                top: 17px;
+            }
+        }
+    }
+
+        > a.photo-thumbnail:hover {
+            .box-shadow(0 1px 8px @shadowColor);
+
+            > .photo-selection {
+            }
+        }
+
+        > a.photo-thumbnail.selected,
+        > a.photo-thumbnail.selected:hover {
+            .box-shadow(0 1px 8px @completedColor);
+        }
+}
+
+
 @import url('build-footage.less');
 @import url('build-branding.less');
