--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -359,55 +359,6 @@ a.twitterSignin {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-.thumbcontainer > a.photo-thumbnail,
-.thumbcontainer > a.photo-thumbnail:link,
-.thumbcontainer > a.photo-thumbnail:hover,
-.thumbcontainer > a.photo-thumbnail:active,
-.thumbcontainer > a.photo-thumbnail:visited {
-  color: #4f4f4f;
-}
-.thumbcontainer > a.photo-thumbnail {
-  display: block;
-  float: left;
-  width: 272px;
-  margin: 20px 0 0 20px;
-  overflow: hidden;
-  text-decoration: none;
-  color: #4f4f4f;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 2px #969696;
-  -moz-box-shadow: 0 1px 2px #969696;
-  box-shadow: 0 1px 2px #969696;
-}
-.thumbcontainer > a.photo-thumbnail > .photo-preview {
-  background-color: #4a4a4a;
-  -moz-background-size: contain;
-  -o-background-size: contain;
-  -webkit-background-size: contain;
-  background-size: contain;
-  height: 140px;
-}
-.thumbcontainer > a.photo-thumbnail > .photo-selection {
-  height: 52px;
-  background-color: #ffffff;
-}
-.thumbcontainer > a.photo-thumbnail > .photo-selection > .photo-title {
-  position: relative;
-  top: 17px;
-}
-.thumbcontainer > a.photo-thumbnail:hover {
-  -webkit-box-shadow: 0 1px 8px #969696;
-  -moz-box-shadow: 0 1px 8px #969696;
-  box-shadow: 0 1px 8px #969696;
-}
-.thumbcontainer > a.photo-thumbnail.selected,
-.thumbcontainer > a.photo-thumbnail.selected:hover {
-  -webkit-box-shadow: 0 1px 8px #57c446;
-  -moz-box-shadow: 0 1px 8px #57c446;
-  box-shadow: 0 1px 8px #57c446;
-}
 .thumbcontainer > a.footage-thumbnail,
 .thumbcontainer > a.footage-thumbnail:link,
 .thumbcontainer > a.footage-thumbnail:hover,
@@ -629,4 +580,83 @@ div.vidyard_tbox {
 }
 .brandingWizard .panel-group .step-done.collapsed {
   margin-top: -82px;
+}
+.thumbcontainer > a.photo-thumbnail,
+.thumbcontainer > a.photo-thumbnail:link,
+.thumbcontainer > a.photo-thumbnail:hover,
+.thumbcontainer > a.photo-thumbnail:active,
+.thumbcontainer > a.photo-thumbnail:visited {
+  color: #4f4f4f;
+}
+.thumbcontainer > a.photo-thumbnail {
+  display: block;
+  float: left;
+  margin: 0 8px 8px 0;
+  overflow: hidden;
+  text-decoration: none;
+  color: #4f4f4f;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 2px #969696;
+  -moz-box-shadow: 0 1px 2px #969696;
+  box-shadow: 0 1px 2px #969696;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview {
+  background-color: #ffffff;
+  width: 228px;
+  height: 130px;
+  text-align: center;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  -webkit-background-size: contain;
+  background-size: contain;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload {
+  text-align: center;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload > span.photo-upload-label {
+  display: block;
+  color: #4f4f4f;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 66px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload > span.glyphicons,
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload > span.glyphicons:before {
+  font-size: 36px;
+  width: 35px;
+  color: #57c446;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload > span.glyphicons:before {
+  margin: 10px 0 0 6px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-title {
+  display: inline-block;
+  margin-top: 6px;
+  text-transform: uppercase;
+  color: #a8a8a8;
+  font-size: 9px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload.hidden {
+  opacity: 0;
+}
+.thumbcontainer > a.photo-thumbnail:hover {
+  -webkit-box-shadow: 0 1px 8px #969696;
+  -moz-box-shadow: 0 1px 8px #969696;
+  box-shadow: 0 1px 8px #969696;
+}
+.thumbcontainer > a.photo-thumbnail.selected,
+.thumbcontainer > a.photo-thumbnail.selected:hover {
+  -webkit-box-shadow: 0 1px 8px #57c446;
+  -moz-box-shadow: 0 1px 8px #57c446;
+  box-shadow: 0 1px 8px #57c446;
+}
+.photo-selected {
+  background-color: #4a4a4a;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  -webkit-background-size: contain;
+  background-size: contain;
+  height: 300px;
 }
